Add a part of the Neural network.

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -27,13 +27,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "NLSwyNFwHXUQ"
       },
       "outputs": [],
       "source": [
         "import torch\n",
+        "import torch.nn as nn # Contains Required functions and layers\n",
+        "import torch.nn.functional as F # For neural network functions:\n",
+        "import torch.optim as optim # Contains Optimization function available in PyTorch.\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
         "import matplotlib.pyplot as plt\n",
@@ -120,7 +123,7 @@
         },
         "outputId": "1533a11e-f05a-42ef-f1c4-812eb9b1b5c8"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +171,7 @@
           "height": 35
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +201,7 @@
           "height": 424
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -248,7 +251,7 @@
           "height": 424
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -410,7 +413,7 @@
         "id": "VT2WVlGzjwxH",
         "outputId": "bf66d383-ecb5-42da-d558-de0bc3c65844"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,7 +505,7 @@
           "height": 687
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -681,7 +684,7 @@
           "height": 874
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +766,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,6 +809,117 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Manuel - Rete neurale"
+      ],
+      "metadata": {
+        "id": "e1ObNJ_qokhw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class NeuralNetwork(nn.Module):\n",
+        "\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    # Define Layers:\n",
+        "    self.l1 = nn.Linear(151, 88) # layer 1\n",
+        "    self.l2 = nn.Linear(88, 26) # layer 2\n",
+        "    self.l3 = nn.Linear(26, 26) # layer 3\n",
+        "\n",
+        "    # Define Activation functions:\n",
+        "    self.sigmoid = nn.Sigmoid()\n",
+        "    self.relu = nn.ReLU()\n",
+        "    self.softmax = nn.LogSoftmax(dim = 1)\n",
+        "\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    '''\n",
+        "    Layers: 3\n",
+        "    Activation Functions:\n",
+        "    RELU for first two layers\n",
+        "    Log Softmax for last layer\n",
+        "    '''\n",
+        "    x = self.l1(x)\n",
+        "    x = self.relu(x)\n",
+        "    x = self.l2(x)\n",
+        "    x = self.relu(x)\n",
+        "    x = self.l3(x)\n",
+        "    x = self.softmax(x)\n",
+        "    return x\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def normalize(value, min, max)\n",
+        "  return (value - min) / (max - min)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Define min and max for features values\n",
+        "min_x_coordinates = 0\n",
+        "max_x_coordinates = 27\n",
+        "min_y_coordinates = 0\n",
+        "max_y_coordinates = 27 # Maybe from 1 to 28?\n",
+        "min_density_value = 0\n",
+        "# max_density_value = x\n",
+        "min_n_inclinations = 0\n",
+        "max_n_inclinations = 34 # Check better\n",
+        "\n",
+        "\n",
+        "# Intialize NN, loss function and optimizer\n",
+        "NN = NeuralNetwork()\n",
+        "criterion = nn.NLLLoss()\n",
+        "optimizer = optim.Adam(NN.parameters(), lr = 0.001)\n",
+        "\n",
+        "# Prepare dataset\n",
+        "'''\n",
+        "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,)),])\n",
+        "trainset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=True, transform=transform)\n",
+        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=True) # trainloader is what holds the data loader object which takes care of shuffling the data and constructing the batches\n",
+        "testset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=False, transform=transform)\n",
+        "testloader = torch.utils.data.DataLoader(testset, batch_size=64, shuffle=False) # No need to shuffle test data.\n",
+        "'''\n",
+        "\n",
+        "# Normalize dataset\n",
+        "'''\n",
+        "for x in x_coordinates:\n",
+        "  normalize(x, min_x_coordinates, max_x_coordinates)\n",
+        "for y in y_coordinates:\n",
+        "  normalize(y, min_y_coordinates, max_y_coordinates)\n",
+        "for density_value in density_values:\n",
+        "  normalize(density_value, min_density_value, max_density_value)\n",
+        "for n_inclinations in inclinations:\n",
+        "  normalize(n_inclinations, min_n_inclinations, max_n_inclinations)\n",
+        "'''\n",
+        "\n",
+        "# Train the model\n",
+        "epochs = 5 # Number of times to train data\n",
+        "for e in range(epochs):\n",
+        "    for features, labels in trainloader:\n",
+        "        optimizer.zero_grad() # set optimizer gradients to zero:\n",
+        "        output = NN(features) # Intial output\n",
+        "        loss = criterion(output, labels) # Loss  Caluclation\n",
+        "        loss.backward() # Pass loss function gradients to pervious layers:\n",
+        "        optimizer.step() # Update Weights\n",
+        "    print(loss.item()) # print loss for each epoch"
+      ],
+      "metadata": {
+        "id": "KNvh-lr3onFu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
