Creato con Colaboratory

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -27,10 +27,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "NLSwyNFwHXUQ",
-        "outputId": "b955afdc-4067-4765-ab82-8525a196fb67",
+        "outputId": "47ce0e16-7330-4a26-cf0c-2d10745da746",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,7 +42,7 @@
           "text": [
             "Collecting torchmetrics\n",
             "  Downloading torchmetrics-1.1.1-py3-none-any.whl (763 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m763.4/763.4 kB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/763.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.4/763.4 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m757.8/763.4 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m763.4/763.4 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>1.20.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (1.23.5)\n",
             "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (2.0.1+cu118)\n",
             "Collecting lightning-utilities>=0.8.0 (from torchmetrics)\n",
@@ -150,11 +150,11 @@
         "id": "PZG8udJCP8HY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 508
+          "height": 510
         },
-        "outputId": "c1c5bc74-7182-492d-e1d6-d25193189c1f"
+        "outputId": "c181078f-c46a-450d-f860-e7a39520b2db"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 561753746/561753746 [00:07<00:00, 72874309.61it/s]\n"
+            "100%|██████████| 561753746/561753746 [00:03<00:00, 173286883.35it/s]\n"
           ]
         },
         {
@@ -211,13 +211,13 @@
       ],
       "metadata": {
         "id": "tNqiXFct9jI_",
-        "outputId": "a9b6b7fd-b7a4-414f-b92f-9d4f4f50cbf9",
+        "outputId": "6a4bc598-7751-4aa2-9f95-805a272a132a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         }
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -241,13 +241,13 @@
       ],
       "metadata": {
         "id": "2QiklEyX8Ac8",
-        "outputId": "913beaf0-42f7-482f-fc4a-721a74feff80",
+        "outputId": "21757db5-c3bd-4a4a-a1d8-128c6dff376c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -291,13 +291,13 @@
       ],
       "metadata": {
         "id": "Yoxr6ef7_TZS",
-        "outputId": "372cf75d-042b-48d0-d530-3fb2ed18f4c8",
+        "outputId": "ef283bfa-1ba7-4a61-eaf8-73a317422fb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,7 +360,9 @@
         "  if DIM_IMG % dim_mask != 0:\n",
         "    return None, None\n",
         "\n",
-        "  centroids = []\n",
+        "  centroids_abs = []\n",
+        "  centroids_rel = []\n",
+        "\n",
         "  # image that will be obtained from the computed centroids\n",
         "  sample_img = torch.zeros(image.size())\n",
         "  # be careful: at the beginning the mask moves from left to right, then from right\n",
@@ -373,9 +375,12 @@
         "\n",
         "      if (c_ri, c_ci) != (None, None):\n",
         "        sample_img[c_ri+i, c_ci+j] = MAX_VALUE # max_value is 255\n",
-        "        centroids.append([c_ri+i, c_ci+j])\n",
+        "        centroids_abs.append([c_ri+i, c_ci+j])\n",
+        "        centroids_rel.append([c_ri+1, c_ci+1])\n",
+        "      else:\n",
+        "        centroids_rel.append([0, 0])\n",
         "\n",
-        "  return sample_img, torch.tensor(centroids, dtype=torch.float)\n",
+        "  return sample_img, torch.tensor(centroids_abs, dtype=torch.float), torch.tensor(centroids_rel, dtype=torch.float)\n",
         "\n",
         "\n",
         "# Elia\n",
@@ -406,8 +411,8 @@
         "    density_img, densities = density_zoning(image)\n",
         "    return density_img, densities\n",
         "\n",
-        "  sample_img, centroids = sampling_zoning(image)\n",
-        "  return sample_img, centroids\n",
+        "  sample_img, centroids_abs, centroids_rel = sampling_zoning(image)\n",
+        "  return sample_img, centroids_abs, centroids_rel\n",
         "\n",
         "\n",
         "\n",
@@ -415,28 +420,30 @@
         "def load_sample_images(tr_images_bin, dim_mask):\n",
         "  samples_and_centroids = []\n",
         "  for i in range(tr_images_bin.size()[0]):\n",
-        "    # shape --> [ ( tensor(), tensor() ), (..., ...), ... ]\n",
+        "    # shape --> [ ( tensor(), tensor(), tensor() ), (..., ..., ...), ... ]\n",
         "    samples_and_centroids.append(zoning(tr_images_bin[i]))\n",
         "\n",
         "  samples = torch.tensor([s[0].tolist() for s in samples_and_centroids])\n",
-        "  centroids = [c[1].tolist() for c in samples_and_centroids]\n",
-        "  return samples, centroids\n",
+        "  centroids_abs = [c[1].tolist() for c in samples_and_centroids]\n",
+        "  centroids_rel = [c[2].tolist() for c in samples_and_centroids]\n",
+        "  return samples, centroids_abs, centroids_rel\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "bin_img = tr_images_bin[10]\n",
         "\n",
-        "sample_img, centroids = zoning(bin_img)\n",
+        "sample_img, centroids_abs, centroids_rel = zoning(bin_img)\n",
         "\n",
         "# If (None, None) is returned it means an error occurred in the application\n",
         "# of mask and step.\n",
-        "if (sample_img, centroids) == (None, None):\n",
+        "if (sample_img, centroids_abs) == (None, None):\n",
         "  print(f\"Error: the dimension of the mask need to be a factor of {DIM_IMG}.\")\n",
         "  sys.exit()\n",
         "\n",
         "\n",
-        "print(\"Centroids: \\n\", centroids)\n",
+        "print(\"Centroids_abs: \\n\", centroids_abs)\n",
+        "print(\"Centroids_rel: \\n\", centroids_rel)\n",
         "\n",
         "plt.figure(1)\n",
         "show_subimages(bin_img)\n",
@@ -457,15 +464,15 @@
           "height": 1000
         },
         "id": "VT2WVlGzjwxH",
-        "outputId": "c9b560d2-747a-40d3-f943-da857a828faa"
+        "outputId": "2365af66-eb0b-4488-ae6e-8fa67ff6a649"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Centroids: \n",
+            "Centroids_abs: \n",
             " tensor([[ 2.,  6.],\n",
             "        [ 2.,  9.],\n",
             "        [ 3., 12.],\n",
@@ -487,7 +494,57 @@
             "        [21., 12.],\n",
             "        [24.,  3.],\n",
             "        [24.,  5.],\n",
-            "        [24.,  8.]])\n"
+            "        [24.,  8.]])\n",
+            "Centroids_rel: \n",
+            " tensor([[0., 0.],\n",
+            "        [3., 3.],\n",
+            "        [3., 2.],\n",
+            "        [4., 1.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [1., 2.],\n",
+            "        [1., 2.],\n",
+            "        [1., 2.],\n",
+            "        [3., 2.],\n",
+            "        [4., 1.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [2., 3.],\n",
+            "        [3., 1.],\n",
+            "        [0., 0.],\n",
+            "        [1., 2.],\n",
+            "        [3., 1.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [2., 1.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [3., 4.],\n",
+            "        [2., 1.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [3., 3.],\n",
+            "        [4., 2.],\n",
+            "        [3., 3.],\n",
+            "        [2., 1.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [1., 4.],\n",
+            "        [1., 2.],\n",
+            "        [1., 1.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.],\n",
+            "        [0., 0.]])\n"
           ]
         },
         {
@@ -501,7 +558,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -545,13 +602,13 @@
       ],
       "metadata": {
         "id": "uGGgy_OfB7p6",
-        "outputId": "f9f19956-33c1-4b65-9b92-2bde932716bd",
+        "outputId": "a7b81e9a-3b4e-48f7-c390-3cbae1ae8238",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 687
         }
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -707,7 +764,7 @@
         "\n",
         "\n",
         "\n",
-        "sample_img, centroids = zoning(bin_img)\n",
+        "sample_img, centroids, _ = zoning(bin_img)\n",
         "\n",
         "segments = rebuild_letter(sample_img)\n",
         "print(segments)\n",
@@ -724,10 +781,10 @@
       ],
       "metadata": {
         "id": "iSSjZvvRCUR8",
-        "outputId": "34eaf0ec-3a10-4394-fa46-88072e48b180",
+        "outputId": "d0e1e2ec-c3a8-4e39-e6c2-95b318b27d8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 803
+          "height": 805
         }
       },
       "execution_count": 9,
@@ -803,7 +860,7 @@
       ],
       "metadata": {
         "id": "a6wYHSlW6TIi",
-        "outputId": "83eb55d9-d702-45fa-dd1e-a7dbdebd953b",
+        "outputId": "26605d2e-2252-4fa4-8816-93ed8f10fc0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -895,7 +952,25 @@
         "  return (value - min) / (max - min)\n",
         "\n",
         "\n",
-        "def create_dataset()\n",
+        "def create_dataset(centroid_coordinates, density_values, n_inclinations):\n",
+        "  # Expecting centroid_coordinates to be a list of lists\n",
+        "  list = [] # Choose the correct data structure\n",
+        "  for centroid in centroid_coordinates:\n",
+        "    for (x,y) in centroid:\n",
+        "      list.append(normalize(x, min_x_coordinates, max_x_coordinates))\n",
+        "      list.append(normalize(y, min_y_coordinates, max_y_coordinates))\n",
+        "\n",
+        "  # Expecting density_values to be a list of tensors\n",
+        "  for sample in density_values:\n",
+        "    for density in sample:\n",
+        "      list.append(normalize(density, min_density_value, max_density_value))\n",
+        "\n",
+        "  # Expecting n_inclinations to be a list of tensors\n",
+        "  for sample in n_inclinations:\n",
+        "    for n_inclination in sample:\n",
+        "      list.append(normalize(n_inclination, min_n_inclinations, max_n_inclinations))\n",
+        "\n",
+        "  return list\n",
         "\n",
         "\n",
         "\n",
@@ -950,24 +1025,10 @@
         "    print(loss.item()) # print loss for each epoch"
       ],
       "metadata": {
-        "id": "KNvh-lr3onFu",
-        "outputId": "3eea9086-a325-4ed5-9aaf-de3a3c6d4c80",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
-        }
+        "id": "KNvh-lr3onFu"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-1efe1b3d2418>\"\u001b[0;36m, line \u001b[0;32m38\u001b[0m\n\u001b[0;31m    def normalize(value, min, max)\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
