Little comment correction

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "NLSwyNFwHXUQ",
         "outputId": "47ce0e16-7330-4a26-cf0c-2d10745da746",
@@ -154,7 +154,7 @@
         },
         "outputId": "c181078f-c46a-450d-f860-e7a39520b2db"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
           "height": 36
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,7 +247,7 @@
           "height": 424
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -297,7 +297,7 @@
           "height": 424
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,7 +466,7 @@
         "id": "VT2WVlGzjwxH",
         "outputId": "2365af66-eb0b-4488-ae6e-8fa67ff6a649"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +608,7 @@
           "height": 687
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -787,7 +787,7 @@
           "height": 805
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,7 +865,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,25 +952,26 @@
         "  return (value - min) / (max - min)\n",
         "\n",
         "\n",
-        "def create_dataset(centroid_coordinates, density_values, n_inclinations):\n",
-        "  # Expecting centroid_coordinates to be a list of lists\n",
+        "def create_dataset(images_centroids, density_values, n_inclinations):\n",
+        "  # Expecting centroid_coordinates to be a list of list of lists\n",
         "  list = [] # Choose the correct data structure\n",
-        "  for centroid in centroid_coordinates:\n",
-        "    for (x,y) in centroid:\n",
-        "      list.append(normalize(x, min_x_coordinates, max_x_coordinates))\n",
-        "      list.append(normalize(y, min_y_coordinates, max_y_coordinates))\n",
+        "  for sample in images_centroids:\n",
+        "    for centroid in sample:\n",
+        "      for (x,y) in centroid:\n",
+        "        list.append(normalize(x, min_x_coordinates, max_x_coordinates))\n",
+        "        list.append(normalize(y, min_y_coordinates, max_y_coordinates))\n",
         "\n",
-        "  # Expecting density_values to be a list of tensors\n",
+        "  # Expecting density_values to be a list of lists\n",
         "  for sample in density_values:\n",
         "    for density in sample:\n",
         "      list.append(normalize(density, min_density_value, max_density_value))\n",
         "\n",
-        "  # Expecting n_inclinations to be a list of tensors\n",
+        "  # Expecting n_inclinations to be a list of lists\n",
         "  for sample in n_inclinations:\n",
         "    for n_inclination in sample:\n",
         "      list.append(normalize(n_inclination, min_n_inclinations, max_n_inclinations))\n",
         "\n",
-        "  return list\n",
+        "  return torch.tensor(list)\n",
         "\n",
         "\n",
         "\n",
